# datasets

./: .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  pyproject.toml  results.md
.github/workflows/: pre-commit.yml  test.yml
UCI/: get_datasets.py  get_datasets_test.py
dataset_baselines/baseline_experiments/uci/: README.md  deterministic.py  gather_results.py  slurm_submit_all.sh  variational.py
dataset_baselines/datasets/: README.md
dataset_baselines/datasets/qm9/: README.md  __init__.py  dataloader.py  datamodule.py
dataset_baselines/datasets/skafte/: README.md  __init__.py  dataset.py
dataset_baselines/datasets/uci/: README.md  __init__.py  datamodule.py  dataset_loader.py  dataset_specs.yaml
dataset_baselines/utils/: __init__.py  standard_scaler.py
scripts/: sbatch_wrapper.sh
tests/datasets/: test_qm9.py  test_skafte.py  test_uci.py
tests/utils/: test_standard_scaler.py
